# dEngine

./: .gitignore  CMakeLists.txt  build_assets.sh  build_disc.sh  convert_textures.sh  run_dctool_ip.sh
data/map/: demo.map  demoNoScene.map
data/materials/: hellknight_pvr.mtl  level1_pvr.mtl
data/scenes/: techDemo.scene
src/: ItextureLoader.c  camera.c  camera.h  config.h  dEngine.c  devtools.c  devtools.h  entities.h  font.c  font.h  globals.h  internal_math.c  internal_math.h  main.c  material.c  material.h  matrix.c  matrix.h  md5anim.c  md5model.c  md5model.h  obj.c  obj.h  quaternion.c  quaternion.h  renderer.c  renderer.h  renderer_fixed.c  renderer_pvr.c  renderer_pvr.h  shadows.c  shadows.h  texture.c  texture.h  world.c
